--- a/annuaire_entreprises/annuaire_app/templates/login.html
+++ b/annuaire_entreprises/annuaire_app/templates/login.html
@@ -32,7 +32,7 @@
 
             {% if form.errors %}
             <div class="alert alert-danger" role="alert">
-                Nom d’utilisateur ou mot de passe invalide.
+                Nom d'utilisateur ou mot de passe invalide.
             </div>
             {% endif %}
 
@@ -43,6 +43,10 @@
                     <button type="submit" class="btn btn-primary">Connexion</button>
                 </div>
             </form>
+
+            <div class="text-center mt-2">
+                <a href="{% url 'password_reset' %}">Mot de passe oublié ?</a>
+            </div>
 
             <p class="mt-3 text-center">
                 Pas encore de compte ?
